src/app/header/header.component.scss
@import '../../assets/scss/icons';
@import '../../assets/scss/typography';
@import '../../assets/scss/layout';
@import '../../assets/scss/color';
@import '../../assets/scss/breakpoint';
@import '../../assets/scss/shapes';
@import '../../assets/scss/buttons';
@import '../../assets/scss/z-index';

.header {
  height: $header-height;
  align-items: center;
  justify-content: space-between;
  text-align: center;
  border-bottom: solid 1px $grey-4;
  background-color: $white;
  padding: 0 20px;
  .right-header {
    @media #{$tablet} {
      display: none !important;
    }
    height: 100%;
  }
}

.logo {
  @include cn-regular-14;
  text-align: initial;
  outline: none;
  margin-right: 70px;
  p {
    margin: 0;
  }
  @media #{$tablet} {
    margin-right: unset;
    text-align: center;
    width: 100%;
  }
}

button {
  @include btn-grey;
  &.red {
    @include btn-red;
    border: none;
    // user name ellipsis handling
    white-space: nowrap;
    width: 100px;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

a {
  color: $grey-2;
  &.active {
    font-weight: bold;
    color: $grey-1;
    border-bottom: 2px solid $red-default;
    text-decoration: none;
  }
  @include cn-regular-14;
}

@media print {
  div {
    display: none !important;
  }
}

.containerIconMenu {
  display: none;
  @media #{$tablet} {
    display: block;
  }
}

@media #{$desktop} {
  .logo-text {
    display: none !important;
  }
}

@keyframes slideMenu {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}
@keyframes background-fade {
  0% {
    background: none;
  }
  100% {
    background: none;
  }
}
.mobile-menu {
  position: fixed;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  z-index: $menu-phone-z-index;
  animation: slideMenu 0.5s;
  .menu-content {
    background-color: $white;
    height: calc(var(--vh, 1vh) * 100);
    width: 350px;
    padding: 27px 25px;
  }
  .outside {
    width: calc(100% - 350px);
    height: 100vh;
    opacity: 0.65;
    animation: background-fade 0.1s;
    background-color: $black;
  }
}
.title {
  margin-bottom: 35px;
  @include cn-regular-26;
  span {
    color: $grey-2;
  }
}

.desktop-show {
  display: block;
  @media #{$tablet} {
    display: none;
  }
}

.mobile-show {
  display: none;
  @include cn-bold-16;
  @media #{$tablet} {
    display: block;
  }
}

